[tool.poetry]
name = "bentoml-experiments"
version = "0.1.0"
description = "The project is a first to experiment the BentoML framework"
authors = ["malik.eljaouadi <malikeljaouadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.5.3"
bentoml = "^1.0.16"
sklearn = "^0.0.post4"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
extend-exclude = '''
/(
  | tests
)/
'''
